styles/components/_header-2036.scss
.content-header__container.header-2036 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 40px 0 100px 0;
  text-align: center;
  //background: url("/public/images/2036-bg.jpg") no-repeat center bottom;
  background-size: cover !important;
  height: 100%;

  .header-inner-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    transition:
      transform math.div($main-carousel-transition-duration, 2) ease-in-out,
      opacity $main-carousel-transition-duration ease-in-out,
      max-width math.div($main-carousel-transition-duration, 2) ease-in-out,
      margin-left math.div($main-carousel-transition-duration, 2) ease-in-out;
    margin-left: 0;
    transform: translateX(0);
    //max-width: map-get($container-max-widths, lg);
    max-width: 100%;
    z-index: 2;

    .no_selected & {
      opacity: .3;
      max-width: $round-image-size-big;

      .header-inner-content__img {
        left: 60px;
      }
    }

    // Ensure the transition of the O geos along with the slide transition speed.
    .is-transitioning & {
      .header-inner-content__img {
        transition: left math.div($main-carousel-transition-duration, 2) ease-in-out;
      }
    }

    .first & {
      margin-left: 0;
      transform: translateX(50px);

      @media (min-width: $round-image-size-big) {
        margin-left: calc(100% - #{$round-image-size-big});
        transform: translateX(100px);
      }
    }

    .last & {
      margin-left: 0;
      transform: translateX(-50px);

      @media (min-width: $round-image-size-big) {
        transform: translateX(-100px);
      }
    }
  }

  .header-inner-content__img {
    z-index: 2;

    .image {
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }

  .title {
    text-transform: uppercase;
    font-size: 1em;
    line-height: 1em;
    letter-spacing: 15px;

    @include media-breakpoint-up(sm) {
      font-size: 2em;
    }
  }

  .title_expanded {
    display: none;
    opacity:0;
    margin-bottom: 20px;
    line-height: 60px;
    transition: opacity math.div($scroll-down-transition-duration, 2) ease;
  }

  .pretitle,
  .subtitle {
    &:empty {
      display: none;
    }
  }

  @keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
  }

  .actions {
    position: absolute;
    left: 0;
    bottom: 0;
    animation: fadeIn math.div($main-carousel-transition-duration, 6) ease-in-out;
    width: 100%;
    z-index: 2;
    //transition: opacity math.div($main-carousel-transition-duration, 3) ease-out;
    padding-bottom: $default-separation;
  }

  .btn {
    margin-bottom: math.div($default-separation, 2);
    &.after-expand{
      display: none;
      .is-scrolled &{
        display: block;
      }
    }
    &.before-expand{
      .is-scrolled &{
        display: none;
      }
    }
  }
}

.header-2036__title {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: absolute;
  top: 80px;
  width: 100%;
  z-index: 2;

  span {
    display: block;
    margin-bottom: 30px;
  }

  .header-2036__title__3 {
    margin-top: 150px;
  }

  svg {
    width: 32px;
    height: 44px;
    overflow: visible;

    path {
      filter:
        drop-shadow(-3px -3px 6px rgba(255, 255, 255, .5))
        drop-shadow(2px 2px 6px rgba(95, 92, 89, .12))
        drop-shadow(4px 4px 11px rgba(177, 167, 162, .4));
    }
  }

  @include media-breakpoint-up(sm) {
    top: 40px;

    svg {
      width: 62px;
      height: 88px;
    }
  }

  @include media-breakpoint-up(md) {
    flex-direction: row;
    top: auto;
    bottom: 40%;

    > span {
      display: block;
      padding: 0 23px;
    }

    .header-2036__title__3 {
      margin: 0 0 0 300px;
    }

    svg {
      width: 130px;
      height: inherit;
    }
  }
}

// Scroll Animation

$pre-animation-delay: math.div($scroll-down-transition-duration, 2);

$curve: cubic-bezier(.63,.72,.79,.98);

.header-2036.content-header__container {
  transition: background $scroll-down-transition-duration ease-in-out;

  .header-inner-content__img {
    position: absolute;
    bottom: calc(100vh - 410px);
    max-width: unset;
    width: 100px;
    height: 100px;
    transform: none;
    box-sizing: content-box;
    z-index: 10;
    padding: 0;
    margin-bottom: 0;
    will-change: width, height;
    transition:
      width $scroll-down-transition-duration $pre-animation-delay $curve,
      height $scroll-down-transition-duration $pre-animation-delay $curve,
      $scroll-down-transition-duration $pre-animation-delay $curve,
      left $scroll-down-transition-duration $pre-animation-delay $curve,
      bottom $scroll-down-transition-duration $pre-animation-delay $curve,
      margin-bottom $scroll-down-transition-duration $pre-animation-delay $curve,
      transform $scroll-down-transition-duration $pre-animation-delay $curve,
      opacity $scroll-down-transition-duration $pre-animation-delay $curve;

    @include media-breakpoint-up(sm) {
      bottom: calc(100vh - 430px);
      width: 130px;
      height: 130px;
    }

    @include media-breakpoint-up(md) {
      left: calc((100vw / 2) - 220px);
      bottom: 36%;
      width: 268px;
      height: 268px;
    }

    video {
      position: absolute;
      display: block;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
      z-index:20;
    }
  }

  .header-inner-content__text {
    position: relative;
    padding-left: math.div($grid-gutter-width, 2);
    padding-right: math.div($grid-gutter-width, 2);
    padding-top: 500px;
    max-width: map-get($container-max-widths, 'lg');
    transition: padding-top $scroll-down-transition-duration * 1.5 ease;

    @include media-breakpoint-up(lg) {
      padding-top: $round-image-size-medium;
    }

    @include media-breakpoint-up(xl) {
      padding-top: $round-image-size-medium;
    }
  }

  .title {
    transition: opacity math.div($scroll-down-transition-duration, 2) ease-out;
  }

  .pretitle,
  .subtitle {
    opacity: 0;
    transition: opacity math.div($scroll-down-transition-duration, 2) ease-out;
  }

  // ANIMATION ACTIVE
  &[data-animation="active"] {
    background: $body-bg !important;

    .header-inner-content {
      //overflow: hidden;
    }

    .header-2036__title {
      opacity: 0;
    }

    .header-inner-content__img {
      top: auto;
      width:110vw;
      height:110vw;
      bottom: -100px !important;
      z-index: -1;
      opacity: .5;

      @media (orientation: portrait) {
        width: 110vh;
        height: 110vh;
        left: auto;
      }

      @include media-breakpoint-up(md) {
        margin-bottom: 0;
        left: calc(-5vw - 12px - (15px / 2));
      }
    }

    .header-inner-content__text {
      padding-top: math.div($round-image-size + $default-separation, 5);
    }

    .title {
      display: none;
    }

    .title_expanded {
      opacity: 1;
      display: block;
    }

    .pretitle,
    .subtitle {
      opacity: 1;
    }
  }
}

